Fix for the image size of the carousel on small screens

--- a/src/style.scss
+++ b/src/style.scss
@@ -17,6 +17,7 @@ section > h2 {
 
 .carousel-item {
   height: 50vw;
+  min-height: 230px;
 }
 .carousel-caption {
   background: linear-gradient(#6668, #bbb9);
